--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,29 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   splash_view: ^2.0.1
-  google_fonts: ^6.2.1
+  google_fonts: 4.0.4
   flutter:
     sdk: flutter
+   
 
+  smooth_page_indicator: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   curved_navigation_bar: ^1.0.3
+  http: ^0.13.5
+  shared_preferences: ^2.2.3
+  carousel_slider: ^4.2.1
+  table_calendar: ^3.1.2
+  firebase_core: ^3.1.1
+  cloud_firestore: ^5.0.2
+  firebase_messaging: ^15.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
